[package]
name = "crypto-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-openai = { version = "0.18.3", default-features = false, features = ["native-tls"] }
base64 = "0.21.7"
clipboard-win = { version = "5.1.0", features = ["std"] }
env_logger = "0.11.1"
image = { version = "0.24.8", default-features = false, features = ["bmp", "png", "jpeg"] }
keyboard-windows = { version = "0.1.0", path = "../keyboard-windows" }
lazy_static = { version = "1.4.0" }
log = "0.4.20"
spin = "0.9.8"
tokio = { version = "1.36.0", features = ["full"] }
tray-icon = "0.11.2"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_UI_Controls"] }

[features]
default = ["toggle_summary"]
toggle_summary = []
handle_copy = []
