[package]
name = "keyboard-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex", "lazy"] }
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
